--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,5 @@
 // Variables
 @import 'variables';
 
-// Bootstrap 本体
-@import 'bootstrap/bootstrap.scss';
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
