--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,20 +1,12 @@
-/*====================================
+// Body
+$body-bg: #f8fafc;
 
-Bootstrap SASSカスタマイズファイル
-
-====================================*/
-
-/*
-Typography
-———————————————*/
-$font-family-sans-serif: 'Nunito',
-sans-serif;
+// Typography
+$font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
-/*
-Colors
-———————————————*/
+// Colors
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
@@ -25,34 +17,3 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
-
-// Gray for use across Bootstrap.
-$gray-base: #000 !default;
-$gray-darker: lighten($gray-base, 13.5%) !default; // #222
-$gray-dark: lighten($gray-base, 20%) !default; // #333
-$gray: lighten($gray-base, 33.5%) !default; // #555
-$gray-light: lighten($gray-base, 46.7%) !default; // #777
-$gray-lighter: lighten($gray-base, 93.5%) !default; // #eee
-
-$primary: #f25f70;
-
-/*
-Body
-———————————————*/
-html,
-body {
-    height: 100%;
-}
-
-#page-content {
-    flex: 1 0 auto;
-}
-
-#sticky-footer {
-    flex-shrink: none;
-}
-
-// Background color for ``.
-$body-bg: #f8fafc !default;
-// Global text color on ``.
-$text-color: $gray-dark !default;
